fix: last fixeds

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ CI_ENVIRONMENT = development
 # DATABASE
 #--------------------------------------------------------------------
 
+# Usar estas variaveis para conexão com o banco
 MYSQL_HOST = mysql
 MYSQL_DB = amzp_backend
 MYSQL_USERNAME = root
